--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
+    "devDependencies": {
+        "nodemon": "^3.1.7"
+    },
   "keywords": [],
   "author": "OritseWeyinmi Samuel Tuoyo",
   "license": "ISC",
