--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "node-fetch": "^3.3.2"
-  },
   "name": "weather-analysis",
   "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.ts"
   },
-    "devDependencies": {
-        "nodemon": "^3.1.7"
-    },
   "keywords": [],
   "author": "OritseWeyinmi Samuel Tuoyo",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "axios": "^1.8.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.10",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
+  }
 }
