--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "weather-analysis",
+  "name": "weather-website",
   "version": "1.0.0",
-  "main": "server.ts",
+  "description": "A simple web application to fetch and display current weather conditions for a given city, street, or country.",
+  "main": "index.ts",
   "scripts": {
-    "start": "nodemon server.ts"
+    "start": "nodemon index.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/samueltuoyo15/Weather-Website.git"
   },
   "keywords": [],
   "author": "OritseWeyinmi Samuel Tuoyo",
   "license": "ISC",
-  "description": "",
+  "bugs": {
+    "url": "https://github.com/samueltuoyo15/Weather-Website/issues"
+  },
+  "homepage": "https://github.com/samueltuoyo15/Weather-Website#readme",
   "dependencies": {
-    "axios": "^1.8.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "helmet": "^8.0.0"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.13.10",
-    "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "ts-node": "^10.9.2"
   }
 }
