--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "module": "CommonJS", 
-    "moduleResolution": "node",
-    "target": "es2020",
-    "esModuleInterop": true,
-    "strict": true,
-    "skipLibCheck": true
+    "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "module": "commonjs",                                /* Specify what module code is generated. */
+    "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
+    "strict": true,                                      /* Enable all strict type-checking options. */
+    "skipLibCheck": true,
+    "noImplicitAny": false
   }
 }
