--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple web application to fetch and display current weather conditions for a given city, street, or country.",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "ts-node index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/samueltuoyo15/Weather-Website#readme",
   "dependencies": {
+    "axios": "^1.8.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0"
